--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "2.1.3",
+    "brmasker-ionic-3": "^1.0.9",
     "chart.js": "^2.7.2",
+    "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
@@ -36,5 +41,11 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file-transfer": {}
+    }
+  }
 }
